# MobileAppDevelopmentSubmission

./: readme.md
backend/: .gitignore  Cargo.toml  build.rs  dockerfile  schema.sql  workout_tracker.db
backend/src/: database_handler.rs  main.rs  routes.rs  tests.rs  tracker.rs  wt_types.rs
backend/src/cpp/: arc.cpp  arc.hpp  barbell_tracking.cpp  dist.cpp  dist.hpp  makefile  mean.cpp  preprocess.cpp  preprocess.hpp  structs.hpp  tracker.hpp
frontend/: dockerfile  package-lock.json  package.json  run.sh
frontend/app/: _layout.tsx
frontend/app/(tabs)/: exercises.tsx  form-checker.tsx  history.tsx  index.tsx  profile.tsx
frontend/app/auth/: login.tsx  register.tsx
frontend/app/components/: AddTemplateButton.tsx  AnnotationSelector.tsx  BarGraph.tsx  HistoryCard.tsx  LineGraph.tsx  PrimaryButton.tsx  TemplateCard.tsx  VideoTrim.tsx
frontend/app/hooks/: useExercises.ts  useWorkout.ts
frontend/app/providers/: AuthProvider.tsx
frontend/app/services/: api.ts  config.ts  uploadService.ts
frontend/app/shared/: theme.ts
frontend/app/types/: workoutTypes.ts
frontend/app/workout/: WorkoutScreen.tsx
frontend/app/workout/components/: ExerciseModal.tsx  SetRow.tsx
