[package]
build = "build.rs"
name = "workout-tracker-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
bcrypt = "0.13"
openssl = "0.10.71"


[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
rand = "0.8"
bcrypt = "0.13"
